[package]
name = "star-bounty"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "star_bounty"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
cp-amm = { git = "https://github.com/MeteoraAg/damm-v2", rev = "f98c1a5d7dad2fa3642b4a3f6df9d313b935a996", features = ["cpi"]}
ruint = "=1.16.0"
streamflow-sdk = {version = "0.10", features = ["cpi"]}
